--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <img id="santa" class="santa-frame" alt="Santa">
       </div>
       <div class="wish-wrapper">
-        <h1 id="wish-title" class="glow-text">Merry Christmas</h1>
+        <h1 id="wish-title" class="glow-text">✨Merry Christmas✨</h1>
         <p class="glow-text fs-24" id="wish-text">
-          Chúc em một mùa Giáng Sinh nhẹ nhàng và dễ thương như chính em. ✨
+          🎄Giáng sinh này chúc em có những giây phút thư giãn, nhẹ nhàng và ý nghĩa, bù lại cho những ngày làm việc bận rộn vừa qua nhé.🎄
         </p>
       </div>
     </div>
